<package>
  <name>rosserial_stm32hal</name>
  <version>0.7.7</version>
  <description>
    rosserial for STM32 using HAL.
  </description>
  <author>Alexis Pojomovsky</author>
  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rosbash</build_export_depend>

  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>rosserial_msgs</test_depend>
</package>
